zlib-1.2.8/configure.log
--------------------
./configure --prefix=/Users/Mike/Code/wgrib2
Mon Nov  9 23:17:16 EST 2015
=== ztest82259.c ===
extern int getchar();
int hello() {return getchar();}
===
gcc -c ztest82259.c
... using gcc

Checking for obsessive-compulsive compiler options...
=== ztest82259.c ===
int foo() { return 0; }
===
gcc -c -Wall -Wmissing-prototypes -Wold-style-definition -Werror=format-security -ffast-math -O3 -I/Users/Mike/Code/wgrib2/include -I/Users/Mike/Code/wgrib2/g2clib-1.4.0 -DGFORTRAN -fopenmp -I/usr/include ztest82259.c
ztest82259.c:1:5: warning: no previous prototype for ‘foo’ [-Wmissing-prototypes]
 int foo() { return 0; }
     ^
ztest82259.c: In function ‘foo’:
ztest82259.c:1:5: warning: old-style function definition [-Wold-style-definition]

Checking for shared library support...
=== ztest82259.c ===
extern int getchar();
int hello() {return getchar();}
===
gcc -w -c -Wall -Wmissing-prototypes -Wold-style-definition -Werror=format-security -ffast-math -O3 -I/Users/Mike/Code/wgrib2/include -I/Users/Mike/Code/wgrib2/g2clib-1.4.0 -DGFORTRAN -fopenmp -I/usr/include -fPIC ztest82259.c
gcc -dynamiclib -install_name ${exec_prefix}/lib/libz.1.dylib -compatibility_version 1 -current_version 1.2.8 -Wall -Wmissing-prototypes -Wold-style-definition -Werror=format-security -ffast-math -O3 -I/Users/Mike/Code/wgrib2/include -I/Users/Mike/Code/wgrib2/g2clib-1.4.0 -DGFORTRAN -fopenmp -I/usr/include -fPIC -o ztest82259.dylib ztest82259.o
Building shared library libz.1.2.8.dylib with gcc.

=== ztest82259.c ===
#include <sys/types.h>
off64_t dummy = 0;
===
gcc -c -Wall -Wmissing-prototypes -Wold-style-definition -Werror=format-security -ffast-math -O3 -I/Users/Mike/Code/wgrib2/include -I/Users/Mike/Code/wgrib2/g2clib-1.4.0 -DGFORTRAN -fopenmp -I/usr/include -D_LARGEFILE64_SOURCE=1 ztest82259.c
ztest82259.c:2:1: error: unknown type name ‘off64_t’
 off64_t dummy = 0;
 ^
(exit code 1)
Checking for off64_t... No.

=== ztest82259.c ===
#include <stdio.h>
int main(void) {
  fseeko(NULL, 0, 0);
  return 0;
}
===
gcc -Wall -Wmissing-prototypes -Wold-style-definition -Werror=format-security -ffast-math -O3 -I/Users/Mike/Code/wgrib2/include -I/Users/Mike/Code/wgrib2/g2clib-1.4.0 -DGFORTRAN -fopenmp -I/usr/include -o ztest82259 ztest82259.c
Checking for fseeko... Yes.

=== ztest82259.c ===
#include <string.h>
#include <errno.h>
int main() { return strlen(strerror(errno)); }
===
gcc -Wall -Wmissing-prototypes -Wold-style-definition -Werror=format-security -ffast-math -O3 -I/Users/Mike/Code/wgrib2/include -I/Users/Mike/Code/wgrib2/g2clib-1.4.0 -DGFORTRAN -fopenmp -I/usr/include -o ztest82259 ztest82259.c
ztest82259.c: In function ‘main’:
ztest82259.c:3:5: warning: old-style function definition [-Wold-style-definition]
 int main() { return strlen(strerror(errno)); }
     ^
Checking for strerror... Yes.

=== ztest82259.c ===
#include <unistd.h>
int main() { return 0; }
===
gcc -c -Wall -Wmissing-prototypes -Wold-style-definition -Werror=format-security -ffast-math -O3 -I/Users/Mike/Code/wgrib2/include -I/Users/Mike/Code/wgrib2/g2clib-1.4.0 -DGFORTRAN -fopenmp -I/usr/include ztest82259.c
ztest82259.c: In function ‘main’:
ztest82259.c:2:5: warning: old-style function definition [-Wold-style-definition]
 int main() { return 0; }
     ^
Checking for unistd.h... Yes.

=== ztest82259.c ===
#include <stdarg.h>
int main() { return 0; }
===
gcc -c -Wall -Wmissing-prototypes -Wold-style-definition -Werror=format-security -ffast-math -O3 -I/Users/Mike/Code/wgrib2/include -I/Users/Mike/Code/wgrib2/g2clib-1.4.0 -DGFORTRAN -fopenmp -I/usr/include ztest82259.c
ztest82259.c: In function ‘main’:
ztest82259.c:2:5: warning: old-style function definition [-Wold-style-definition]
 int main() { return 0; }
     ^
Checking for stdarg.h... Yes.

=== ztest82259.c ===
#include <stdio.h>
#include <stdarg.h>
#include "zconf.h"
int main()
{
#ifndef STDC
  choke me
#endif
  return 0;
}
===
gcc -c -Wall -Wmissing-prototypes -Wold-style-definition -Werror=format-security -ffast-math -O3 -I/Users/Mike/Code/wgrib2/include -I/Users/Mike/Code/wgrib2/g2clib-1.4.0 -DGFORTRAN -fopenmp -I/usr/include ztest82259.c
ztest82259.c: In function ‘main’:
ztest82259.c:4:5: warning: old-style function definition [-Wold-style-definition]
 int main()
     ^
Checking whether to use vs[n]printf() or s[n]printf()... using vs[n]printf().

=== ztest82259.c ===
#include <stdio.h>
#include <stdarg.h>
int mytest(const char *fmt, ...)
{
  char buf[20];
  va_list ap;
  va_start(ap, fmt);
  vsnprintf(buf, sizeof(buf), fmt, ap);
  va_end(ap);
  return 0;
}
int main()
{
  return (mytest("Hello%d\n", 1));
}
===
gcc -Wall -Wmissing-prototypes -Wold-style-definition -Werror=format-security -ffast-math -O3 -I/Users/Mike/Code/wgrib2/include -I/Users/Mike/Code/wgrib2/g2clib-1.4.0 -DGFORTRAN -fopenmp -I/usr/include -o ztest82259 ztest82259.c
ztest82259.c:3:5: warning: no previous prototype for ‘mytest’ [-Wmissing-prototypes]
 int mytest(const char *fmt, ...)
     ^
ztest82259.c: In function ‘main’:
ztest82259.c:12:5: warning: old-style function definition [-Wold-style-definition]
 int main()
     ^
Checking for vsnprintf() in stdio.h... Yes.

=== ztest82259.c ===
#include <stdio.h>
#include <stdarg.h>
int mytest(const char *fmt, ...)
{
  int n;
  char buf[20];
  va_list ap;
  va_start(ap, fmt);
  n = vsnprintf(buf, sizeof(buf), fmt, ap);
  va_end(ap);
  return n;
}
int main()
{
  return (mytest("Hello%d\n", 1));
}
===
gcc -c -Wall -Wmissing-prototypes -Wold-style-definition -Werror=format-security -ffast-math -O3 -I/Users/Mike/Code/wgrib2/include -I/Users/Mike/Code/wgrib2/g2clib-1.4.0 -DGFORTRAN -fopenmp -I/usr/include ztest82259.c
ztest82259.c:3:5: warning: no previous prototype for ‘mytest’ [-Wmissing-prototypes]
 int mytest(const char *fmt, ...)
     ^
ztest82259.c: In function ‘main’:
ztest82259.c:13:5: warning: old-style function definition [-Wold-style-definition]
 int main()
     ^
Checking for return value of vsnprintf()... Yes.

=== ztest82259.c ===
#define ZLIB_INTERNAL __attribute__((visibility ("hidden")))
int ZLIB_INTERNAL foo;
int main()
{
  return 0;
}
===
gcc -c -Wall -Wmissing-prototypes -Wold-style-definition -Werror=format-security -ffast-math -O3 -I/Users/Mike/Code/wgrib2/include -I/Users/Mike/Code/wgrib2/g2clib-1.4.0 -DGFORTRAN -fopenmp -I/usr/include ztest82259.c
ztest82259.c: In function ‘main’:
ztest82259.c:3:5: warning: old-style function definition [-Wold-style-definition]
 int main()
     ^Checking for attribute(visibility) support... No.

ALL = static shared
AR = libtool
ARFLAGS = -o
CC = gcc
CFLAGS = -Wall -Wmissing-prototypes -Wold-style-definition -Werror=format-security -ffast-math -O3 -I/Users/Mike/Code/wgrib2/include -I/Users/Mike/Code/wgrib2/g2clib-1.4.0 -DGFORTRAN -fopenmp -I/usr/include
CPP = gcc -E
EXE =
LDCONFIG = ldconfig
LDFLAGS =
LDSHARED = gcc -dynamiclib -install_name ${exec_prefix}/lib/libz.1.dylib -compatibility_version 1 -current_version 1.2.8
LDSHAREDLIBC = -lc
OBJC = $(OBJZ) $(OBJG)
PIC_OBJC = $(PIC_OBJZ) $(PIC_OBJG)
RANLIB = ranlib
SFLAGS = -Wall -Wmissing-prototypes -Wold-style-definition -Werror=format-security -ffast-math -O3 -I/Users/Mike/Code/wgrib2/include -I/Users/Mike/Code/wgrib2/g2clib-1.4.0 -DGFORTRAN -fopenmp -I/usr/include -fPIC
SHAREDLIB = libz.dylib
SHAREDLIBM = libz.1.dylib
SHAREDLIBV = libz.1.2.8.dylib
STATICLIB = libz.a
TEST = all teststatic testshared
VER = 1.2.8
Z_U4 =
exec_prefix = ${prefix}
includedir = ${prefix}/include
libdir = ${exec_prefix}/lib
mandir = ${prefix}/share/man
prefix = /Users/Mike/Code/wgrib2
sharedlibdir = ${libdir}
uname = Darwin
--------------------


